--- a/src/styles_graphic_design.css
+++ b/src/styles_graphic_design.css
@@ -547,9 +547,10 @@ body {
 
   @media (max-width: 750px) {
     body {
+      padding-top: 100px;
       overflow-x: hidden;
     }
-    
+  
     .navbar-container {
       width: 100vw;
       display: flex;
@@ -559,13 +560,14 @@ body {
       background-color: #fff; 
       position: fixed;
       z-index: 10;
+      margin-top: -100px;
     }
     
     .logo img {
+      margin-top: 10px;
       width: 196px;
       height: 24px;
     }
-    
     #menuToggle {
       padding-right: 70px;
       position: relative;
