--- a/src/styles_web_design.css
+++ b/src/styles_web_design.css
@@ -552,9 +552,10 @@ body {
 
   @media (max-width: 750px) {
     body {
+      padding-top: 100px;
       overflow-x: hidden;
     }
-    
+  
     .navbar-container {
       width: 100vw;
       display: flex;
@@ -564,9 +565,11 @@ body {
       background-color: #fff; 
       position: fixed;
       z-index: 10;
+      margin-top: -100px;
     }
     
     .logo img {
+      margin-top: 10px;
       width: 196px;
       height: 24px;
     }
